<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.drugdialog.DrugSelectionDialogFragment">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_element_margin"
        android:text="@string/drug_selection_dialog_fragment_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dialog_divider"
        style="@style/divider"
        android:layout_margin="@dimen/view_element_margin"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_drug_list"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="@dimen/view_element_margin"
        app:layout_constraintBottom_toTopOf="@id/btn_dialog_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_divider"
        tools:listitem="@layout/fragment_patient_drug_list_row" />

    <TextView
        android:id="@+id/dialog_no_data_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_element_margin"
        android:text="@string/error_no_data_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_dialog_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_divider" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dialog_confirm"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/view_element_margin"
        android:layout_marginBottom="@dimen/view_element_margin"
        android:text="@string/drug_selection_dialog_fragment_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>