<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.patientdetails.PatientDetailsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/patient_details_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/blue_light"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_details_patient_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_element_margin"
                android:text="@string/tv_patient_id_label"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_details_patient_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_element_margin"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/tv_details_patient_id_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_details_patient_state_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_element_margin"
                android:text="@string/tv_patient_state_label"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_patient_id_label" />

            <TextView
                android:id="@+id/tv_details_patient_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_element_margin"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/tv_details_patient_state_label"
                app:layout_constraintTop_toBottomOf="@id/tv_details_patient_id" />

            <TextView
                android:id="@+id/tv_details_patient_state_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_element_margin"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_patient_id" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/details_patient_drug_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/view_element_margin"
        app:layout_constraintBottom_toTopOf="@id/details_button_get_data"
        app:layout_constraintTop_toBottomOf="@id/patient_details_card"
        tools:listitem="@layout/fragment_patient_drug_list_row" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/details_drug_loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/details_button_get_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/patient_details_card" />

    <TextView
        android:id="@+id/tv_details_status_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_no_data_message"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/details_button_get_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/patient_details_card" />

    <Button
        android:id="@+id/details_button_get_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_element_margin"
        android:text="@string/get_data_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/details_button_administer_drugs"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/details_button_administer_drugs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_element_margin"
        android:text="@string/administer_drugs_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/details_button_get_data" />

</androidx.constraintlayout.widget.ConstraintLayout>