<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/blue_light"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_patient_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/list_row_element_margin"
                android:text="@string/tv_patient_id_label"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_patient_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/list_row_element_margin"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintStart_toEndOf="@id/tv_patient_id_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_patient_state_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/list_row_element_margin"
                android:text="@string/tv_patient_state_label"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_patient_id_label" />

            <TextView
                android:id="@+id/tv_patient_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/list_row_element_margin"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_patient_state_label"
                app:layout_constraintTop_toBottomOf="@id/tv_patient_id_label" />

            <TextView
                android:id="@+id/tv_patient_state_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_row_element_margin"
                android:layout_marginBottom="@dimen/list_row_element_margin"
                android:layout_marginEnd="@dimen/view_element_margin"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_drug_selection_dialog"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/list_row_element_margin"
                android:backgroundTint="@color/button_red"
                android:text="@string/open_drug_selection_dialog_button_text"
                android:textColor="@color/white"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_patient_state"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_patient_state_symbol" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>